test/classes/deitz/test_method_call2.good
Error: Unresolved call ':bar.foo(2)' (test_method_call2.chpl:10)
Candidates are:
  foo(i: int) (test_method_call2.chpl:1)
  :bar.foo() (test_method_call2.chpl:6)
